# suprezip-zipapplication

./: package-lock.json  package.json
_agents_brain/: implementation_plan.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: encoding_util.rs  lib.rs  zip_handler.rs
src-tauri/src/audit/: logger.rs
src-tauri/src/extractor/: iso.rs  mod.rs  sevenzip.rs  squashfs.rs  zip.rs
src-tauri/src/os/windows/: registry.rs
src-tauri/src/security/: checksum.rs
src-tauri/src/task_queue/: mod.rs
src-tauri/src/utils/: sys_info.rs
src/app/: globals.css  layout.tsx  page.tsx
