[package]
name = "suprezip"
version = "0.1.0"
description = "A high-performance Zip64 compression app"
authors = ["Rhee Hose"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3" }
tauri-plugin-shell = "2"
tauri-plugin-os = "2.0.0"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-log = "2"
zip = { version = "2.2.2", features = ["deflate", "zstd"] }
encoding_rs = "0.8"
rayon = "1.10"
walkdir = "2.5"
anyhow = "1.0"
