[package]
name = "suprezip"
version = "1.1.0"
description = "Mission-Critical Universal Extractor for Professional Use"
authors = ["Rhee Hose"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3" }
tauri-plugin-shell = "2"
tauri-plugin-os = "2.0.0"
tauri-plugin-dialog = "2.0.0"
tauri-plugin-log = "2"
zip = { version = "2.3.0", features = ["deflate", "zstd", "bzip2"] }
sevenz-rust = "0.6.1"
iso9660 = "0.1.1"
backhand = "0.12.0"
goblin = "0.8.2"
encoding_rs = "0.8"
rayon = "1.10"
walkdir = "2.5"
anyhow = "1.0"
chrono = "0.4"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
md-5 = "0.10"
hex = "0.4"
winreg = "0.52"
dashmap = "6.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
whoami = "1.5"
is_elevated = "0.1"
sysinfo = "0.30"
tokio-util = { version = "0.7", features = ["codec"] }
